stupid-arch-scripts/etc-ufw-user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any 10922 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 10922 -j ACCEPT
-A ufw-user-input -p udp --dport 10922 -j ACCEPT

### tuple ### allow any 10922 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 10922 -j ACCEPT
-A ufw-user-output -p udp --dport 10922 -j ACCEPT

### tuple ### allow tcp 9001 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 9001 -j ACCEPT

### tuple ### allow tcp 58269 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 58269 -j ACCEPT

### tuple ### allow any 63148 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 63148 -j ACCEPT
-A ufw-user-input -p udp --dport 63148 -j ACCEPT

### tuple ### allow any 63149 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 63149 -j ACCEPT
-A ufw-user-input -p udp --dport 63149 -j ACCEPT

### tuple ### allow tcp 10922 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 10922 -j ACCEPT

### tuple ### allow udp 10922 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 10922 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-output -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -m conntrack --ctstate INVALID -j LOG --log-prefix "[UFW AUDIT INVALID] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
-I ufw-before-logging-input -j LOG --log-prefix "[UFW AUDIT] " -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 10
-I ufw-before-logging-output -j LOG --log-prefix "[UFW AUDIT] " -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 10
-I ufw-before-logging-forward -j LOG --log-prefix "[UFW AUDIT] " -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
